# hyperswitch-card-vault

./: .dockerignore  .env  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cog.toml  config.example.toml  diesel.toml  docker-compose.pg-replica.yml  flake.nix  locker-private-key.pem  locker-public-key.pem  postman.md  tenant-private-key.pem  tenant-public-key.pem
.cargo/: config.toml
.config/: nextest.toml
.github/: git-cliff-release.toml
.github/workflows/: CI-pr.yml  CI-push.yml  CI.yml  build-and-push-docker-image.yml  migration-check.yml  release-new-version.yml
benches/: bench-private-key.pem  bench-public-key.pem  encryption.rs  hashing.rs  luhn-test.rs
config/: config.example.toml  development.toml  docker-configuration.toml
dev/runtime-config/configs/: locker.use_read_replica
docs/: hash_table_primary_key_swap_runbook.md  kv-data-access-patterns.csv  pr-tested-flows-external.md  pr-tested-flows.md  testing-flows.md
docs/collection/: Tartarus.postman_collection.json  hyperswitch-card-vault.postman_collection.json
docs/guides/: feature-flags.md  local-development.md  setup.md  testing.md
docs/openapi/: spec.yml
docs/openapi-v2/: spec.yml
loadtest/: Makefile  README.md  docker-compose.yaml
loadtest/config/: grafana-dashboard.yaml
loadtest/scripts/: http-rs.js  production-traffic.js  settings.js
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-10-21-104200_create-tables/: down.sql  up.sql
migrations/2023-10-26-072935_duplication-table/: down.sql  up.sql
migrations/2024-02-06-064347_add-fingerprint-table/: down.sql  up.sql
migrations/2024-04-16-130237_add-ttl-to-locker-table/: down.sql  up.sql
migrations/2024-06-21-105740_remove_tenant_id_column_from_all_tables/: down.sql  up.sql
migrations/2024-07-02-071458_v2-migrations/: down.sql  up.sql
migrations/2024-09-28-170243_add_created_at_to_entity/: down.sql  up.sql
migrations/2025-03-21-091712_init-euler/: up.sql
migrations/2026-06-23-120000_add-updated-by-to-fingerprint-hash-table/: down.sql  up.sql
migrations/2026-06-24-125858_create_reverse_lookup_table/: down.sql  up.sql
migrations/2026-06-24-130000_add-updated-by-to-reverse-lookup/: down.sql  up.sql
migrations/2026-06-30-000000_add_updated_by_to_kv_tables/: down.sql  up.sql
migrations/2026-06-30-000000_hash-table-hash-id-unique-index/: up.sql
migrations/2026-06-30-000001_hash-table-data-hash-primary-index/: metadata.toml  up.sql
migrations/2026-06-30-000001_hash-table-hash-id-unique-index/: down.sql
migrations/2026-06-30-000002_hash-table-data-hash-primary-index/: down.sql
migrations/2026-06-30-000002_hash-table-primary-key-swap/: down.sql  up.sql
migrations/2026-06-30-000003_hash-table-primary-key-swap/: down.sql
migrations/2026-07-13-150329-0000_add_locker_hash_id_merchant_id_customer_id_index/: down.sql  up.sql
nix/modules/flake/: devshell.nix  rust.nix  services.nix
scripts/: smoke-test.sh
src/: api_client.rs  app.rs  config.rs  crypto.rs  custom_extractors.rs  db.rs  domain.rs  error.rs  lib.rs  logger.rs  middleware.rs  migration.rs  observability.rs  routes.rs  runtime_config.rs  storage.rs  tenant.rs  utils.rs  validations.rs
src/crypto/: aes.rs  aws_kms.rs  encryption_manager.rs  hash_manager.rs  hcvault.rs  hollow.rs  jw.rs  keymanager.rs  kms.rs  multiple.rs  secrets_manager.rs  sha.rs  vault.rs
src/crypto/encryption_manager/: encryption_interface.rs  managers.rs
src/crypto/encryption_manager/managers/: aes.rs  jw.rs
src/crypto/hash_manager/: hash_interface.rs
src/crypto/hash_manager/managers/: sha.rs
src/crypto/keymanager/: config.rs  external_keymanager.rs  internal_keymanager.rs  kms_keymanager.rs  types.rs
src/crypto/keymanager/external_keymanager/: types.rs  utils.rs
src/crypto/secrets_manager/: managers.rs  secrets_interface.rs  secrets_management.rs
src/crypto/secrets_manager/managers/: aws_kms.rs  azure_vault.rs  gcp_kms.rs
src/crypto/secrets_manager/managers/aws_kms/: core.rs  implementers.rs
src/crypto/secrets_manager/managers/azure_vault/: core.rs  implementers.rs
src/crypto/secrets_manager/managers/gcp_kms/: core.rs  implementers.rs
src/crypto/secrets_manager/managers/hcvault/: core.rs  implementers.rs
src/crypto/secrets_manager/managers/hollow/: implementers.rs
src/domain/: fingerprint.rs  hash.rs  locker.rs  merchant.rs  vault.rs
src/error/: container.rs  custom_error.rs  kv.rs  transforms.rs
src/logger/: config.rs  env.rs  formatter.rs  setup.rs  storage.rs
src/observability/: macros.rs  metrics.rs
src/observability/metrics/: middleware.rs
src/routes/: data.rs  decision_gateway.rs  entity.rs  health.rs  key_custodian.rs  key_migration.rs  migration.rs  routes_v2.rs  tenant.rs  update_score.rs
src/routes/data/: crypto_operation.rs  transformers.rs  types.rs
src/routes/routes_v2/: data.rs
src/routes/routes_v2/data/: types.rs
src/routes/tenant/: types.rs
src/storage/: caching.rs  consts.rs  db.rs  kv.rs  redis.rs  schema.rs  scheme.rs  storage_v2.rs  test.rs  types.rs  utils.rs
src/storage/caching/: entity.rs  fingerprint.rs  hash_table.rs  merchant.rs
src/storage/kv/: constraints.rs  entity.rs  fallback.rs  impls.rs  metrics.rs  mod.rs  partition_key.rs  request_id.rs  resource.rs  scheme.rs  serializable_query.rs  wrapper.rs
src/storage/kv/impls/: fingerprint.rs  hash_table.rs  locker.rs  mod.rs  reverse_lookup.rs  vault.rs
src/storage/storage_v2/: db.rs  types.rs
tests/integration/: mod.rs  runtime_key_manager_config.rs
